# syscall

./: .gitignore  README.md  main.py  pyproject.toml  requirements-worker.txt  run_server.py
evolution/: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  research.md  spec_v1.md
evolution/assets/: make_perf_chart.py
evolution/dashboard/: index.html  package.json  tsconfig.json  vite.config.ts
evolution/dashboard/src/: App.tsx  api.ts  index.css  types.ts
evolution/dashboard/src/components/: FitnessChart.tsx  Header.tsx  (+5 more)
evolution/docs/: monitoring-runs.md  session-handoff.md
evolution/problems/: batched_matmul.yaml  batched_matmul_ref.py  selective_scan.yaml  softmax.yaml
evolution/problems/deep_eval/: bench_vs_cuda.py  best_kernel.py  optimized_kernel.py
evolution/scripts/: bootstrap_brev.sh  check_run.sh  run_alt_problem_20m.sh  run_kernelbench_v2.sh  run_medium_20m.sh  run_multi_problem_suite.sh  run_reduction_20m.sh  run_stencil_20m.sh  serve_dashboard.sh  setup_eval_worker.sh  smoke_test.sh  test_problem.py
evolution/src/kernelswarm/: __init__.py  agents.py  artifacts.py  brev_api.py  cli.py  dashboard.py  hashing.py  manifest.py  map_elites.py  models.py  nemotron.py  persistence.py  pipeline.py  registry.py  remote.py  sdk.py  search.py  serialization.py  stats.py
evolution/tests/: stress_streaming.py  test_brev_api.py  test_dashboard.py  test_deep_mutation_and_plugins.py  test_hashing.py  test_kernelbench_plugin.py  test_map_elites.py  test_nemotron.py  test_remote_eval_contract.py  test_swarm_search.py  test_vector_add_pipeline.py
(+84 files in other folders)
