[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syscall"
version = "0.1.0"
description = "Distributed agent swarm for evolutionary code optimization"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "websockets>=12.0",
    "pydantic>=2.5",
    "httpx>=0.25",
]

[tool.setuptools.packages.find]
include = ["syscall*", "problems*"]

[project.scripts]
syscall-server = "syscall.server:main"
