[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kernelswarm"
version = "0.1.0"
description = "KernelSwarm v1 evaluation foundation"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "KernelSwarm" }]
dependencies = []

[project.scripts]
kernelswarm = "kernelswarm.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
